# vkclient

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Readme.md
.github/workflows/: build.yml
examples/longpoll_bot/: Cargo.toml  Readme.md
examples/longpoll_bot/src/: main.rs
examples/usersget/: Cargo.toml  Readme.md
examples/usersget/src/: main.rs
src/: builder.rs  inner.rs  lib.rs  longpoll.rs  structs.rs  upload.rs  vkapi.rs  wrapper.rs
