[package]
name = "vkclient"
version = "4.0.4"
edition = "2021"
description = "Vk Api client implementation"
documentation = "https://docs.rs/vkclient"
readme = "Readme.md"
license = "MIT OR Apache-2.0"
keywords = ["client", "api", "vk", "vkontakte", "vk-api"]
categories = ["api-bindings"]
authors = ["Mnwa <mikhail@panfilov.tech>"]
repository = "https://github.com/Mnwa/vkclient"

[features]
default = [
    "compression_zstd",
    "compression_gzip",
    "encode_json",
    "encode_msgpack",
    "uploader",
    "longpoll",
    "longpoll_stream"
]

longpoll_stream = ["futures-util", "async-stream"]
longpoll = []
compression_zstd = ["zstd"]
compression_gzip = ["flate2"]
encode_json = ["serde_json"]
encode_msgpack = ["rmp-serde"]
uploader = ["hyper-multipart-rfc7578"]

[dependencies]

[dependencies.cfg-if]
version = "1"

[dependencies.hyper-rustls]
version = "0.24"
features = ["http2"]

[dependencies.hyper]
version = "0.14"
features = ["client", "http2"]

[dependencies.serde_urlencoded]
version = "0.7"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.zstd]
version = "0.12"
optional = true

[dependencies.flate2]
version = "1"
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.rmp-serde]
version = "1"
optional = true

[dependencies.hyper-multipart-rfc7578]
version = "0.8"
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.async-stream]
version = "0.3"
optional = true
