[package]
name = "vkclient"
version = "5.0.3"
edition = "2021"
description = "Vk Api client implementation"
documentation = "https://docs.rs/vkclient"
readme = "Readme.md"
license = "MIT OR Apache-2.0"
keywords = ["client", "api", "vk", "vkontakte", "vk-api"]
categories = ["api-bindings"]
authors = ["Mnwa <mikhail@panfilov.tech>"]
repository = "https://github.com/Mnwa/vkclient"

[features]
default = [
    "compression_zstd",
    "compression_gzip",
    "encode_json",
    "encode_msgpack",
    "uploader",
    "longpoll",
    "longpoll_stream"
]

longpoll_stream = ["futures-util", "async-stream"]
longpoll = []
compression_zstd = ["zstd"]
compression_gzip = ["flate2"]
encode_json = ["serde_json"]
encode_msgpack = ["rmp-serde"]
uploader = ["reqwest/multipart"]

[dependencies]

[dependencies.bytes]
version = "1"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "charset", "http2", "macos-system-configuration"]

[dependencies.cfg-if]
version = "1"

[dependencies.serde_urlencoded]
version = "0.7"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.zstd]
version = "0.13"
optional = true

[dependencies.flate2]
version = "1"
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.rmp-serde]
version = "1"
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.async-stream]
version = "0.3"
optional = true
